# cpp-waste-recycling-helgaKalicz

./: .gitignore  CMakeLists.txt  Dustbin.cpp  Dustbin.h  DustbinContentError.cpp  DustbinContentError.h  Garbage.cpp  Garbage.h  PaperGarbage.cpp  PaperGarbage.h  PlasticGarbage.cpp  PlasticGarbage.h  README.md  main.cpp
